Fix issues with function ordering in pretty printed output. Add doc.

--- a/doc/gawktexi.in
+++ b/doc/gawktexi.in
@@ -54,7 +54,7 @@
 @c applies to and all the info about who's publishing this edition
 
 @c These apply across the board.
-@set UPDATE-MONTH July, 2020
+@set UPDATE-MONTH August, 2020
 @set VERSION 5.1
 @set PATCHLEVEL 0
 
@@ -28737,6 +28737,12 @@ the target of a redirection isn't a scalar, it gets parenthesized.
 front of the @code{BEGIN} and @code{END} rules,
 the @code{BEGINFILE} and @code{ENDFILE} rules,
 the pattern--action rules, and the functions.
+
+@item
+Functions are listed alphabetically. All functions in the @code{awk}
+namespace are listed first, in alphabetical order.  Then come the
+functions in namespaces.  The namespaces are listed in alphabetical order,
+and the functions within each namespace are listed alphabetically.
 
 @end itemize
 
