Sync Italian manual with English one.

--- a/doc/it/gawktexi.in
+++ b/doc/it/gawktexi.in
@@ -15108,7 +15108,7 @@ La regola @code{ENDFILE} @`e eseguita anche per file in input vuoti.
 Normalmente, se si verifica un errore di lettura durante il normale
 ciclo di elaborazione dell'input,
 questo @`e considerato fatale (il programma termina).  Tuttavia, se @`e presente
-una regola @code{ENDFILE}, l'errore non @`e considerato fatale, ma viene
+una regola @code{BEGINFILE}, l'errore non @`e considerato fatale, ma viene
 impostato @code{ERRNO}.  Ci@`o permette di intercettare ed elaborare errori
 di I/O a livello di programma @command{awk}.
 
