use/check for GetSystemTime() instead of GetSystemTimeAsFileTime()

--- a/doc/it/gawktexi.in
+++ b/doc/it/gawktexi.in
@@ -40655,7 +40655,7 @@ piattaforma.
 Se la chiamata di sistema standard C @code{gettimeofday()} @`e disponibile
 nella piattaforma in uso, questo @`e il valore restituito.  In caso contrario,
 se si sta lavorando con MS-Windows, la chiamata di sistema @`e fatta a
-@code{GetSystemTimeAsFileTime()}.
+@code{GetSystemTime()}.
 
 @cindex @code{sleep()} (estensione)
 @cindex estensione @subentry @code{sleep()}
