--- a/extension/configh.in
+++ b/extension/configh.in
@@ -55,8 +55,8 @@
 /* Define to 1 if you have the `getdtablesize' function. */
 #undef HAVE_GETDTABLESIZE
 
-/* Define to 1 if you have the `GetSystemTimeAsFileTime' function. */
-#undef HAVE_GETSYSTEMTIMEASFILETIME
+/* Define to 1 if you have the `GetSystemTime' function. */
+#undef HAVE_GETSYSTEMTIME
 
 /* Define if the GNU gettext() function is already present or preinstalled. */
 #undef HAVE_GETTEXT
