Fix a spelling error in the manual.

--- a/doc/gawktexi.in
+++ b/doc/gawktexi.in
@@ -24347,7 +24347,7 @@ is to search using BREs. You use @command{-E} to specify the use
 of EREs, and @option{-F} to specify searching for fixed strings.
 
 In practice, systems continue to come with separate @command{egrep}
-and @command{fgrep} utilities, for backwards compatibilty. This
+and @command{fgrep} utilities, for backwards compatibility. This
 @value{SECTION} provides an @command{awk} implementation of @command{egrep},
 which supports all of the POSIX-mandated options.
 You invoke it as follows:
