Add spell checking for gawkinet.texi.

--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -933,7 +933,7 @@ awkcard.nc: $(CARDFILES)
 awkcard.pdf: awkcard.ps
 	ps2pdf awkcard.ps awkcard.pdf
 
-spell: spellmanual spellworkflow spellmanpage
+spell: spellmanual spellworkflow spellmanpage spellinet
 
 spellmanual:
 	@echo ==== gawktexi.in ====;
@@ -949,6 +949,11 @@ spellmanpage:
 	@echo ==== gawk.1 ====
 	export LC_ALL=C ; spell "$(srcdir)"/gawk.1 | \
 	sort -u | comm -23 - "$(srcdir)"/wordlist3
+
+spellinet:
+	@echo ==== gawkinet.texi ====
+	export LC_ALL=C ; spell "$(srcdir)"/gawkinet.texi | \
+	sort -u | comm -23 - "$(srcdir)"/wordlist4
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
